<resources>
    <string name="app_name">" g2016w_dse_0401"</string>
    <string name="action_settings">Settings</string>
    <string name="CurrentTime">current clocktime</string>
    <string name="title_activity_add_alarm">addAlarmActivity</string>
    <string name="add_alarm">Add alarm</string>
    <string name="alarmdate">Date:</string>
    <string name="alarmtime">Time:</string>
    <string name="url_base">10.0.2.2:9000/acrestservice/</string>
    <string name="add">+</string>
    <string name="refresh">Refresh</string>
</resources>
