<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="g2016w_dse_0401.eichinger.univie.ac.at.g2016w_dse_0401.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CurrentTime"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clocktime"
        android:textSize="24sp"
        android:layout_below="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addAlarmButton"
        android:text="@string/add"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/clocktime"
        android:layout_alignBottom="@+id/clocktime"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/refresh_btn"
        android:layout_below="@+id/addAlarmButton"
        android:layout_marginTop="14dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/Salatherz" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/alarms"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/refresh_btn"
        android:layout_alignParentStart="true" />

</RelativeLayout>
